--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
 
 <p>A simple roguelike based on the <em>Hulks and Horrors</em> tabletop RPG written with Python 2.7 and libtcod.</p>
 
+<p>As of now the engine is complete, but additional work will be needed to build it up to a more accurate representation of the source. The eventual goal is to be as accurate a representation of the H&H rules as can be managed, allowing for adjustment to the form.</p>
+
 <p>Code is based on the excellent tutorial here: <a href="http://www.roguebasin.com/index.php?title=Complete_Roguelike_Tutorial,_using_python%2Blibtcod">http://www.roguebasin.com/index.php?title=Complete_Roguelike_Tutorial,_using_python%2Blibtcod</a></p>
 
 <p><em>Hulks and Horrors</em> is a tabletop roleplaying game inspired by classic Red Box, with a sci-fi reimagining. More on that here: <a href="http://www.bedroomwallpress.com/p/hulks-and-horrors.html">http://www.bedroomwallpress.com/p/hulks-and-horrors.html</a></p>
