--- a/index.html
+++ b/index.html
@@ -19,8 +19,9 @@
         <h2>A simple roguelike based on the Hulks and Horrors tabletop RPG written with Python 2.7 and libtcod</h2>
 
         <section id="downloads">
-          <a href="https://github.com/jarcane/handhRL/zipball/master" class="btn">Download as .zip</a>
-          <a href="https://github.com/jarcane/handhRL/tarball/master" class="btn">Download as .tar.gz</a>
+          <a href="https://github.com/jarcane/handhRL/releases" class='btn'>Binary Releases</a>
+          <a href="https://github.com/jarcane/handhRL/zipball/master" class="btn">Source .zip</a>
+          <a href="https://github.com/jarcane/handhRL/tarball/master" class="btn">Source .tar.gz</a>
           <a href="https://github.com/jarcane/handhRL" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
         </section>
       </div>
